--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -14,54 +14,37 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active DashboardIndex" href="#">
+                        <a class="nav-link active DashboardIndex" href="#" onclick="return _Dashboard()">
                             <i class="ni ni-tv-2 text-primary"></i>
-                            <span class="nav-link-text" id="Dashboard" onclick="return _Dashboard()">Dashboard</span>
+                            <span class="nav-link-text" >Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link MyProfile" href="#">
+                        <a class="nav-link MyProfile" href="#" onclick="return _Profile()">
                             <i class="ni ni-single-02 text-yellow"></i>
-                            <span class="nav-link-text" onclick="return _Profile()">My Profile</span>
+                            <span class="nav-link-text" >My Profile</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link CustomerIndex" href="#">
+                        <a class="nav-link CustomerIndex" href="#" onclick="return _Customer()">
                             <i class="ni ni-planet text-orange"></i>
-                            <span class="nav-link-text" onclick="return _Customer()">Customer</span>
+                            <span class="nav-link-text" >Customer</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link CompanyIndex" href="#">
+                        <a class="nav-link CompanyIndex" href="#" onclick="return _Company()">
                             <i class="ni ni-pin-3 text-primary"></i>
-                            <span class="nav-link-text" onclick="return _Company()">Company</span>
+                            <span class="nav-link-text" >Company</span>
                         </a>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="ni ni-bullet-list-67 text-default"></i>
-                            <span class="nav-link-text">Tables</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="ni ni-key-25 text-info"></i>
-                            <span class="nav-link-text">Login</span>
-                        </a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="ni ni-circle-08 text-pink"></i>
                             <span class="nav-link-text">Register</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="ni ni-send text-dark"></i>
-                            <span class="nav-link-text">Upgrade</span>
-                        </a>
-                    </li>
+                    
                 </ul>
             <hr class="my-3">
 
