--- a/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
+++ b/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
@@ -1,47 +1,185 @@
 ﻿
-@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml"; }
+@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml";
+}
 
+<div class="header bg-primary">
+    <div class="container-fluid">
+        <div class="header-body">
+            <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                    <h6 class="h2 text-white d-inline-block mb-0">Customer</h6>
+                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="#">Tables</a></li>
+                        </ol>
+                    </nav>
+                </div>
+                <div class="col-lg-6 col-5 text-right">
+                    <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<div class="container" style="margin-top: 30px">
+<div class="container" style="margin-top: 30px;padding-bottom: 40px">
+    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="width: 150%">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="myModalLabel">Compose News Customer</h2>
+                    <button type="button" class="close fa fa-close" data-dismiss="modal" aria-hidden="true"></button>
+                </div>
+                <div class="form">
+                    <div class="row">
+                        <div class="modal-body" style="padding: 50px">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label>Name</label>
+                                    <input id="Customer_Name" class="form-control" placeholder="Name">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Phone</label>
+                                    <input id="Customer_Phone" class="form-control" placeholder="Phone">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Email</label>
+                                    <input id="Customer_Email" class="form-control" placeholder="Email">
+                                </div>
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Comment</label>
+                                    <input id="Customer_Comment" class="form-control" placeholder="Address">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 block_loader" style="display: none">
+                        <div style="float:right;width: 55%">
+                            <div class="loader"></div>
+                        </div>
+                    </div>
+                    <div class="modal-footer col-md-12">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="return _Add();">Add</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="width: 150%">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Compose News Company</h4>
+                    <button type="button" class="close fa fa-close" data-dismiss="modal" aria-hidden="true"></button>
+                </div>
+                <div class="form">
+                    <div class="row">
+                        <div class="modal-body" style="padding: 50px">
+                            <div class="row">
+                                <div class="col-md-6" style="display: none">
+                                    <label>Id</label>
+                                    <input id="Id_edit" class="form-control" readonly>
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Name</label>
+                                    <input id="Customer_Name_edit" class="form-control">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Phone</label>
+                                    <input id="Customer_Phone_edit" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Email</label>
+                                    <input id="Customer_Email_edit" class="form-control">
+                                </div>
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Comment</label>
+                                    <input id="Customer_Comment_edit" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="loader" style="display:none"></div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="return _Update();">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-xl-12">
-            <table id="table_Customer" class="display">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Phone</th>
-                        <th>Email</th>
-                        <th>User Name</th>
-                        <th>Company</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in ViewBag.list_customer)
-                    {
+            <div class="table-responsive">
+                <table id="table_Customer" class="table align-items-center table-flush">
+                    <thead class="thead-light">
                         <tr>
-                            <td>@item.Customer_Name</td>
-                            <td>@item.Customer_Phone</td>
-                            <td>@item.Customer_Email</td>
-                            <td>@item.Customer_UserName</td>
-                            <td>@item.CompanyId</td>
-                            <td class="text-center">
-                                <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fa fa-ellipsis-v"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="#">Detail</a>
-                                        <a class="dropdown-item" href="#">Edit</a>
-                                        <a class="dropdown-item" href="#">Delete</a>
-                                    </div>
-                                </div>
-                            </td>
+                            <th style="font-size: 0.875rem" scope="col" class="sort">Avatar</th>
+                            <th style="font-size: 0.875rem" scope="col" class="sort">Name</th>
+                            <th style="font-size: 0.875rem" scope="col" class="sort">Phone</th>
+                            <th style="font-size: 0.875rem" scope="col" class="sort">Email</th>
+                            <th style="font-size: 0.875rem" scope="col" class="sort">Comment</th>
+                            <th style="font-size: 0.875rem" scope="col">Action</th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody class="list">
+                        @foreach (var item in ViewBag.list_customer)
+                        {
+                            <tr>
+                                <th>
+                                    <div class="media align-items-center">
+                                        <a href="#" class="avatar rounded-circle mr-3">
+                                            <img alt="Image placeholder" src="@Url.Content(item.Customer_Avatar)">
+                                        </a>
+                                    </div>
+                                </th>
+                                <td>
+                                    @item.Customer_Name
+                                </td>
+                                <td>
+                                    <span class="badge badge-dot mr-4">
+                                        <i class="bg-warning"></i>
+                                        <span class="status">@item.Customer_Phone</span>
+                                    </span>
+                                </td>
+                                <td>
+                                    @item.Customer_Email
+                                </td>
+                                <td>
+                                    @item.Customer_Comment
+                                </td>
+                                <td class="text-right">
+                                    <div class="dropdown">
+                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                            <a class="dropdown-item" data-toggle="modal" data-target="#myModal2" href="#" onclick="return _GetById(@item.Id)">Edit</a>
+                                            <a class="dropdown-item" onclick="return _Delete(@item.Id)" id="@item.Id">Delete</a>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+
+
+                    </tbody>
+                </table>
+
+            </div>
+
         </div>
 
     </div>
@@ -51,14 +189,126 @@
 @section css{
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+    <link href="~/Areas/Admin/Public/DataTable/pagination.css" rel="stylesheet" />
+    <link href="~/Areas/Admin/Public/css/loader.css" rel="stylesheet" />
 }
 @section js{
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#table_Customer').DataTable();
+            $('#table_Customer').DataTable({
+                "lengthMenu": [10, 15, 20, 30],
+                "pagingType": "full_numbers",
+                language: {
+                    paginate: {
+                        next: '<i class="fa fa-fw fa-long-arrow-right">',
+                        previous: '<i class="fa fa-fw fa-long-arrow-left">'
+                    }
+                }
+            });
         });
     </script>
-   
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+    <script type="text/javascript">
+        function _Add() {
+            $('.block_loader').show();
+            var customerObj = {
+                Customer_Name: $('#Customer_Name').val(),
+                Customer_Comment: $('#Customer_Comment').val(),
+                Customer_Phone: $('#Customer_Phone').val(),
+                Customer_Email: $('#Customer_Email').val()
+            }
+            $.ajax({
+                url: "/Admin/CustomerManagement/Add",
+                contentType: "application/json;charset=utf-8",
+                data: JSON.stringify(customerObj),
+                type: "POST",
+                dataType: "json",
+                success: function (data) {
+                    window.location.href = data;
+                },
+                error: function (errormessage) {
+                    alert("Add Unsuccessfully !");
+                }
+
+            });
+        }
+
+        function _GetById(CustomerId) {
+            $.ajax({
+                url: "/Admin/CustomerManagement/GetById?CustomerId=" + CustomerId,
+                contentType: "application/json;charset=utf-8",
+                type: "GET",
+                dataType: "json",
+                success: function (result) {
+                    $('#Customer_Name_edit').val(result.Customer_Name);
+                    $('#Customer_Phone_edit').val(result.Customer_Phone);
+                    $('#Customer_Email_edit').val(result.Customer_Email);
+                    $('#Customer_Comment_edit').val(result.Customer_Comment);
+                    $('#Id_edit').val(result.Id);
+                },
+                error: function () {
+                    alert("Error");
+                }
+            });
+        }
+
+        function _Update() {
+            $('.block_loader').show();
+            var customerObj = {
+                Id: $('#Id_edit').val(),
+                Customer_Name: $('#Customer_Name_edit').val(),
+                Customer_Phone: $('#Customer_Phone_edit').val(),
+                Customer_Email: $('#Customer_Email_edit').val(),
+                Customer_Comment: $('#Customer_Comment_edit').val()
+            }
+            $.ajax({
+                url: "/Admin/CustomerManagement/Update",
+                contentType: "application/json;charset=utf-8",
+                data: JSON.stringify(customerObj),
+                type: "POST",
+                dataType: "json",
+                success: function (data) {
+                    window.location.href = data;
+                },
+                error: function (errormessage) {
+                    alert("Update Unsuccessfully !");
+                }
+
+            });
+        }
+
+        function _Delete(CustomerId) {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: "/Admin/CustomerManagement/Delete?CustomerId=" + CustomerId,
+                        contentType: "application/json;charset=utf-8",
+                        type: "GET",
+                        dataType: "json",
+                        success: function (result) {
+                            $('#' + CustomerId).parent().parent().parent().parent().remove();
+                            Swal.fire(
+                                'Deleted!',
+                                'Your file has been deleted.',
+                                'success'
+                            )
+                        },
+                        error: function () {
+                            alert("Error !");
+                        }
+                    });
+
+                }
+            });
+        }
+    </script>
 }
