--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -33,8 +33,22 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link CompanyIndex" href="#" onclick="return _Company()">
-                            <i class="ni ni-pin-3 text-primary"></i>
+                            <i class="fa fa-building-o" style="color:brown" aria-hidden="true"></i>
                             <span class="nav-link-text" >Company</span>
+                        </a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link ServiceIndex" href="#" onclick="return _Service()">
+                            <i class="fa fa-handshake-o" aria-hidden="true" style="color:darkblue"></i>
+                            <span class="nav-link-text" >Service</span>
+                        </a>
+                    </li> 
+                    
+                    <li class="nav-item">
+                        <a class="nav-link ImageIndex" href="#" onclick="return _Image()">
+                            <i class="fa fa-picture-o" aria-hidden="true" style="color: darkorange"></i>
+                            <span class="nav-link-text" >Image</span>
                         </a>
                     </li>
 
