--- a/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
+++ b/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
@@ -17,6 +17,7 @@
                 </div>
                 <div class="col-lg-6 col-5 text-right">
                     <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>
+                    <a class="btn btn-sm btn-neutral" href="/Admin/CompanyManagement/CompanyIndex">Reload</a>
                 </div>
             </div>
         </div>
@@ -137,7 +138,7 @@
     <div class="row">
         <div class="col-xl-12">
             <div class="table-responsive">
-                <table id="table_Company" class="table align-items-center table-flush">
+                <table id="table_Company" class="cell-border text-center align-items-center table-flush ">
                     <thead class="thead-light">
                         <tr>
                             <th style="font-size: 0.875rem" scope="col" class="sort">Name</th>
