--- a/Areas/Admin/Views/ServiceManagement/Add.cshtml
+++ b/Areas/Admin/Views/ServiceManagement/Add.cshtml
@@ -118,9 +118,8 @@
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">Sale Status</label>
                                             <select name="Service_SaleStatus" class="form-control form-control-alternative">
-                                                <option value="0" selected>0</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
+                                                <option value="0" selected>Not Sale</option>
+                                                <option value="1">Sale</option>
                                             </select>
                                         </div>
                                     </div>
