--- a/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
+++ b/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
@@ -1,8 +1,5 @@
 ﻿
-@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml";
-
-
-}
+@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml";}
 
 <div class="header bg-primary">
     <div class="container-fluid">
@@ -29,6 +26,57 @@
 
 <div class="container" style="margin-top: 30px;padding-bottom: 40px">
 
+    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-primary">
+                    <h2 class="modal-title" style="color: white" id="myModalLabel">Compose News Customer</h2>
+                    <button type="button" class="close fa fa-close" style="color: white" data-dismiss="modal" aria-hidden="true"></button>
+                </div>
+                <div class="form">
+                    <div class="row">
+                        <div class="modal-body" style="padding: 50px">
+                            <div class="row">
+                                <div class="col-md-6" style="display:none">
+                                    <label>Service_Id</label>
+                                    <input type="number" readonly value="" id="Service_Id" class="form-control">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Number of Employee</label>
+                                    <input type="number" id="Number_Of_Employee" class="form-control">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Date Start</label>
+                                    <input type="date" id="Date_Start" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Date End</label>
+                                    <input type="date" id="Date_End" class="form-control">
+                                </div>
+                                <div class="col-md-6" style="margin-top: 15px">
+                                    <label>Description</label>
+                                    <input id="Description" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 block_loader" style="display: none">
+                        <div style="float:right;width: 55%">
+                            <div class="loader"></div>
+                        </div>
+                    </div>
+                    <div class="modal-footer col-md-12">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="return _Submit();">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col-xl-12">
             <div class="table-responsive">
@@ -39,7 +87,6 @@
                             <th style="font-size: 0.875rem" class="sort">Name</th>
                             <th style="font-size: 0.875rem" class="sort">Status</th>
                             <th style="font-size: 0.875rem" class="sort">Description</th>
-                            <th style="font-size: 0.875rem" class="sort">Tax Percentage</th>
                             <th style="font-size: 0.875rem" class="sort">Sale Price</th>
                             <th style="font-size: 0.875rem" class="sort">Price</th>
                             <th style="font-size: 0.875rem">Action</th>
@@ -78,9 +125,6 @@
                                         @item.Service_Description
                                     </td>
                                     <td>
-                                        @item.Service_TaxPercentage
-                                    </td>
-                                    <td>
                                         $@item.Service_PriceSale
                                     </td>
                                     <td>
@@ -92,6 +136,7 @@
                                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                                <a class="dropdown-item" data-toggle="modal" data-target="#myModal1" onclick="return _setServiceId(@item.Id)" style="cursor: pointer">Employ</a>
                                                 <a class="dropdown-item" href="/Admin/ServiceManagement/Edit/@item.Id">Edit</a>
                                                 <a class="dropdown-item" style="cursor: pointer" onclick="return _Delete(@item.Id)" id="@item.Id">Delete</a>
                                             </div>
@@ -137,6 +182,35 @@
 
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
     <script type="text/javascript">
+        function _setServiceId(ServiceId) {
+            $("#Service_Id").val(ServiceId)
+        }
+        function _Submit() {
+            var data = {
+                Service_Id: $("#Service_Id").val(),
+                Number_Of_Employee: $("#Number_Of_Employee").val(),
+                Date_Start: $("#Date_Start").val(),
+                Date_End: $("#Date_End").val(),
+                Description: $("#Description").val()
+            }
+            $.ajax({
+                url: "/Admin/OrderManagament/CreateOrder",
+                contentType: "application/json;charset=utf-8",
+                type: "POST",
+                data: JSON.stringify(data),
+                dataType: "json",
+                success: function (result) {
+                    alert(result);
+                    if (result != "The Employee is greater than our Staff") {
+                        window.location.href = result;
+                    }
+                },
+                error: function () {
+
+                }
+
+            });
+        }
 
         function _Delete(ServiceId) {
             Swal.fire({
