--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -74,6 +74,9 @@
         function _Image() {
             $(location).attr("href", "/Admin/ImageManagement/ImageIndex");
         }
+        function _Staff() {
+            $(location).attr("href", "/Admin/StaffManagement/StaffIndex");
+        }
     </script>
     @RenderSection("js", false)
 </body>
