--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -133,9 +133,9 @@
                             <span>Support</span>
                         </a>
                         <div class="dropdown-divider"></div>
-                        <a href="#!" class="dropdown-item">
+                        <a href="#!" onclick="return _Logout()" class="dropdown-item">
                             <i class="ni ni-user-run"></i>
-                            <span onclick="return _Logout()">Logout</span>
+                            <span>Logout</span>
                         </a>
                     </div>
                 </li>
