--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -37,11 +37,16 @@
                             <span class="nav-link-text" >Company</span>
                         </a>
                     </li>
-                    
                     <li class="nav-item">
-                        <a class="nav-link ServiceIndex" href="#" onclick="return _Service()">
+                        <a class="nav-link ServiceIndex " href="#" onclick="return _Service()">
                             <i class="fa fa-handshake-o" aria-hidden="true" style="color:darkblue"></i>
                             <span class="nav-link-text" >Service</span>
+                        </a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link StaffIndex " href="#" onclick="return _Staff()">
+                            <i class="fa fa-users" style="color: InactiveCaptionText" aria-hidden="true"></i>
+                            <span class="nav-link-text">Staff</span>
                         </a>
                     </li> 
                     
